--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   oktoast: ^3.1.5
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
+  flutter_widget_from_html_core: ^0.8.5+3
+  markdown: ^5.0.0
 
 dev_dependencies:
   flutter_test:
