--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,10 @@ flutter:
      - family: spixel
        fonts:
          - asset: assets/fonts/ShakeySlabserif.ttf
+
+     - family: flowy
+       fonts:
+         - asset: assets/fonts/FlowyIconData.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
